--- a/css/navbar.css
+++ b/css/navbar.css
@@ -5,18 +5,87 @@
     margin-right: auto;
     padding-left: 10px;
     padding-right:10px;
+    font-family: 'inter';
 }
-.bg {
-    background-color: #5C6B28;
+header {
+    padding: 60px 0;
 }
-ul.nav li a, ul.nav li a:visited {
+/* NAVBAR START */
+nav {
+    background-color: #E7E8A6;
+    /* position: sticky; 
+    top: 0; */
+    width: 100%;
+}
+/* NAVBAR END */
+
+/* LINK START */
+a:hover, a:visited {
     color: #141C11 !important;
 }
-
-ul.nav li a:hover, ul.nav li a:active {
-    color: #DA9432 !important;
+a:hover, a:active {
+    color: #FD8D14 !important;
 }
-
-ul.nav li.active a {
-    color: #DA9432 !important;
+a {
+    color: #141C11 !important;
+    text-decoration: none;
 }
+/* LINK END */
+
+/* MAIN START */
+.trees-header {
+    text-align: center;
+}
+.radius-padding {
+    border-radius: 20px;
+    padding: 10px;
+}
+/* MAIN END */
+
+/* FOOTER START */
+footer{
+    background-color: #E7E8A6;
+    bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+    margin-top: 50px;
+}
+.footer-wrapper{
+    width: 100%;
+    margin-inline: auto;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.footer-socmeds{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.fa-instagram, .fa-twitter, .fa-linkedin, .fa-google, .fa-dribbble {
+    background: #5C6B28;
+    color: white;
+    padding: 10px 10px;
+    border-radius: 50px;
+}
+.fa-facebook{
+    background: #5C6B28;
+    color: white;
+    padding: 10px 13px 10px 13px;
+    border-radius: 50px;
+}
+.footer-socmeds a:hover{
+    background-color: #FD8D14;
+    color: white;
+}
+  
+.footer-logo p{
+    text-align: center;
+    font-family: 'inter';
+    font-weight: 400;
+    color: #141C11;
+}
+.footer-socmeds a {
+    color: white !important;
+}
+/* FOOTER END */
