--- a/css/about.css
+++ b/css/about.css
@@ -4,13 +4,12 @@
 }
 
 .p-container{
-    padding: 240px 70px 70px 0px;
+    padding: 70px 70px 70px 0px;
     color: #141C11;
     font-size: 18px;
     margin-bottom: 0%;
 }
 h1{
-    padding-top: 120px;
     padding-bottom: 10px;
 }
 body{
@@ -26,11 +25,21 @@ a:hover {
 .p2-container{
     padding: 10px 70px 70px 10px;
     font-size: 18px;
-    margin-top: 180px;
+    margin-top: 110px;
 }
 h2{
     padding-bottom: 10px;
 }
 .div1-container{
     padding-bottom: 50px;
+}
+
+.container-fluid a{
+    color: #141C11;;
+    font-weight: 450;
+    text-decoration: none;
+}
+.container-fluid a:hover{
+    color: #FD8D14;
+    text-decoration: underline;
 }
